[package]
name = "pantomime"
version = "0.1.0" # ci-verify-version
authors = ["Jason Longshore <hello@jasonlongshore.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/pantomime-rs/pantomime"
keywords = ["actor", "streams", "streaming", "actors", "concurrency", "async", "asynchronous"]
homepage = "https://www.pantomime.dev/"
description = "A library that empowers you to build concurrent, stateful, and stream-oriented programs with ease"

[dependencies]
atty = "0.2"
chrono = "0.4.6"
crossbeam = "0.7.1"
downcast-rs = "1.0.3"
fern = { version = "0.5", features = ["colored"] }
futures = { version = "0.1", optional = true }
log = "0.4"
mio = { version = "0.6", optional = true }
num_cpus = "1.0"
parking_lot = "0.7"
rand = "0.6"

# FIXME: cannot conditionally enable features depending upon platform
#        so we have an intermediate shim that reexports it if we
#        aren't on windows
#
#        https://github.com/rust-lang/cargo/issues/1197
signal-hook-shim = { path = "./crates/signal-hook-shim", optional = true }

tokio = { version = "0.1.15", optional = true }
tokio-executor = { version = "0.1", optional = true }
tokio-threadpool = { version = "0.1.11", optional = true }
tokio-reactor = { version = "0.1", optional = true }
tokio-timer = { version = "0.2", optional = true }

[features]
default = ["mio-support", "posix-signals-support"]
futures-support = ["futures"]
mio-support = ["mio"]
posix-signals-support = ["signal-hook-shim"]
testkit = []
tokio-support = ["futures", "futures-support", "tokio", "tokio-executor", "tokio-threadpool", "tokio-reactor", "tokio-timer"]
