[package]
name = "pantomime"
version = "0.1.0" # ci-verify-version
authors = ["Jason Longshore <hello@jasonlongshore.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/pantomime-rs/pantomime"
keywords = ["actor", "streams", "streaming", "actors", "concurrency", "async", "asynchronous"]
homepage = "https://www.pantomime.dev/"
description = "A library that empowers you to build concurrent, stateful, and stream-oriented programs with ease"

[dependencies]
atty = "0.2"
chrono = "0.4.6"
conqueue = "0.3.0"
crossbeam = "0.7.1"
downcast-rs = "1.0.3"
fern = { version = "0.5", features = ["colored"] }
log = "0.4"
mio = "0.6.19"
num_cpus = "1.0"
parking_lot = "0.8"
rand = "0.6"

# FIXME: cannot conditionally enable features depending upon platform
#        so we have an intermediate shim that reexports it if we
#        aren't on windows
#
#        https://github.com/rust-lang/cargo/issues/1197
signal-hook-shim = { path = "./crates/signal-hook-shim", optional = true }

[features]
default = ["posix-signals-support"]
posix-signals-support = ["signal-hook-shim"]
testkit = []
